cs3219-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cs3219-deployment
spec:
  selector:
    matchLabels:
      app: cs3219
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: cs3219
    spec:
      containers:
      - name: cs3219
        image: cs3219-nginx-image
        imagePullPolicy: Never
        ports:
        - containerPort: 80
